# site-behavior-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  next.config.mjs  package-lock.json  package.json  tsconfig.cloudflare.json  tsconfig.json  tsconfig.test.json  wrangler.container.jsonc  wrangler.jsonc
app/: globals.css  layout.tsx  page.tsx  robots.ts  site-behavior-app.tsx  sitemap.ts  twitter-image.tsx
cloudflare/: container-worker.ts  worker.ts
docs/: deploy-cloudflare-containers.md  deploy-node-container.md  deployment-topology.md  go-live-public-scanner.md  pagegraph-adapter.md  pagegraph-schema.md  runtime-boundaries.md  scan-job-model.md
lib/: access-control.test.ts  access-control.ts  adblock-engine.test.ts  adblock-engine.ts  category-rollups.test.ts  category-rollups.ts  cname-uncloaking.test.ts  cname-uncloaking.ts  compare-reports.test.ts  compare-reports.ts  consent-banner.test.ts  consent-banner.ts  corpus-overview.ts  corpus-stats.test.ts  corpus-stats.ts  cors.test.ts  cors.ts  csv-export.test.ts  csv-export.ts  domain-utils.test.ts  domain-utils.ts  edge-scan-gate.test.ts  edge-scan-gate.ts  edge-url-safety.test.ts  edge-url-safety.ts  featured-sites.test.ts  featured-sites.ts  fingerprint-detection-guard.test.ts  fingerprint-detection-guard.ts  fingerprint-observer.test.ts  fingerprint-observer.ts  guards.ts  ip-safety.test.ts  ip-safety.ts  jsonld-script.test.ts  jsonld-script.ts  keystroke-exfiltration.test.ts  keystroke-exfiltration.ts  (+60 more)
tools/adblock-wasm/: Cargo.toml
tools/adblock-wasm/src/: lib.rs
(+336 files in other folders)
